--- a/index.html
+++ b/index.html
@@ -6,45 +6,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" href="./img_site/def-img/logo.png" type="image/png">
 	<title>Document</title>
 </head>
 <body>
+	<a href="https://opensea.io/collection/army-of-geese-of-ukraine"><img class="opensea" src="./img_site/def-img/logomark-blue.png" width="60px" height="60px" alt=""></a>
+	
 
 	<div class="description">
 		<div class="logo">Army of Ukraine</div>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, deleniti nisi maxime ipsa temporibus obcaecati totam recusandae illo minus. Placeat nulla iusto illum nemo voluptas doloremque ab similique cupiditate rerum.</p>
+		<p>A detachment of modified ethnic war geese U-2 guarding the borders of Ukraine. The geese are trained by American instructors, they are as patriotic as possible and ready to bring death to the invaders. We collect donations to help Ukraine in the fight against Russian invaders. The funds will be used for the needs of the army and refugees.</p>
 	</div>
 
 	<div class="swiper slider slider_main">
 		<div class="swiper-wrapper slier__wrapper">
 
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/goose_ak-47.png);"></div>
+				<div class="slider__img first" data-swiper-parallax="20%"><img class="goose_first" src="./img_site/esctop/q.png" width="100%" height="100%" alt=""	></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/Goose_grenade.png);"></div>
+				<div class="slider__img s" data-swiper-parallax="30%" ><img class="goose_second" src="./img_site/esctop/w.png" width="100%" height="100%" alt=""></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/Goose_grenade_launcher.png);"></div>
+				<div class="slider__img 3" data-swiper-parallax="20%" ><img class="goose_third" src="./img_site/esctop/e.png" width="100%" height="100%" alt=""></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/Goose_javeline.png);"></div>
+				<div class="slider__img 4" data-swiper-parallax="30%"><img class="goose_fourth" src="./img_site/esctop/r.png" width="100%" height="100%" alt=""></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/Goose_revolver.png);"></div>
+				<div class="slider__img 5" data-swiper-parallax="20%"><img class="goose_fifth" src="./img_site/esctop/t.png" width="100%" height="100%" alt=""></div>
 			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/Goose_shotgun.png);"></div>
-			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/7.jpg);"></div>
-			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/8.jpg);"></div>
-			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/9.jpg);"></div>
-			</div>
+			
 
 		</div>
 	</div>
@@ -53,32 +45,21 @@
 		<div class="swiper-wrapper slier__wrapper">
 
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/goose_ak-47.png);"></div>
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(img_site/esctop/q.png);"></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/Goose_grenade.png);"></div>
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(img_site/esctop/w.png);"></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/Goose_grenade_launcher.png);"></div>
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(img_site/esctop/e.png);"></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/Goose_javeline.png);"></div>
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(img_site/esctop/r.png);"></div>
 			</div>
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/Goose_revolver.png);"></div>
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(img_site/esctop/t.png);"></div>
 			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/Goose_shotgun.png);"></div>
-			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/7.jpg);"></div>
-			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/8.jpg);"></div>
-			</div>
-			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/9.jpg);"></div>
-			</div>
+			
 
 		</div>
 	</div>
